--- a/cadastrodeprodutovenda.html
+++ b/cadastrodeprodutovenda.html
@@ -7,238 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro de Produto</title>
     <link rel="stylesheet" href="css/final.css">
-    <!-- <style>
-        :root {
-            --roxo: #A200CB;
-            --cinza: grey;
-        }
 
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        main {
-            background-image: url(img/bannerpho.png);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-        }
-
-        .card {
-            display: flex;
-            flex-direction: column;
-            width: 600px;
-            margin: auto;
-            align-items: center;
-            background-color: white;
-            border-radius: 4px;
-            -webkit-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
-            -moz-box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
-            box-shadow: 0px 0px 8px 0px rgba(204, 204, 204, 1);
-            margin-top: 40px;
-            margin-bottom: 40px;
-        }
-
-        .card h2 {
-            font-size: 40px;
-            padding: 20px;
-            color: var(--roxo);
-        }
-
-        form label {
-            font-size: 20px;
-            color: var(--roxo);
-        }
-
-        .radios {
-            display: flex;
-            justify-content: space-around;
-            width: 500px;
-        }
-
-        .radio {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            padding: 30px;
-            width: 100px;
-        }
-
-        .radio2 {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            width: 100px;
-        }
-
-        form input {
-            display: flex;
-            /*Flexibilizar o conteudo do input dentro do formulario*/
-            flex-direction: column;
-            /* Coloquei em coluna e assim quebra linha*/
-            padding: 10px;
-            width: 230px;
-        }
-
-        .campo {
-            /* width: 500px; */
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-        }
-
-        .campo input {
-            border-radius: 10px;
-            border: solid 1px var(--cinza);
-        }
-
-        .btn {
-            display: flex;
-            justify-content: center;
-            margin: auto;
-            padding-bottom: 10px;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: var(--roxo);
-            border-radius: 4px;
-            border: solid 1px var(--roxo);
-            color: white;
-        }
-
-        .opcvenda {
-            width: 380px;
-            margin: auto;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            line-height: 3 .0em;
-        }
-
-        .opcvenda input {
-            border-radius: 10px;
-            border: solid 1px var(--cinza);
-            width: 100px;
-        }
-
-        hr {
-            margin: 30px;
-        }
-
-        .fotos {
-            display: flex;
-            flex-direction: column;
-            margin: auto;
-        }
-
-        .fotos label {
-            margin: auto;
-            padding: 15px 0px;
-        }
-
-        .fotos input {
-            border: dotted 1px grey;
-            border-radius: 4px;
-            height: 60px;
-            width: 400px;
-            margin: auto;
-            margin-bottom: 30px;
-        }
-
-        .fotos img {
-            width: 80px;
-        }
-
-        /*Header e Footer*/
-        header {
-            height: 130px;
-            display: flex;
-            justify-content: space-between;
-            align-content: center;
-            background-color: #A200CB;
-        }
-
-        .container img {
-            height: 95px;
-            width: 204px;
-        }
-
-        .container {
-            width: 1200px;
-            margin: auto;
-        }
-
-        .container input {
-            width: 605px;
-            height: 35px;
-            margin-left: -120px;
-        }
-
-        .menu-centro {
-            display: flex;
-            justify-content: center;
-        }
-
-        .ca {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        .ca a {
-            text-decoration: none;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .botao-login {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        #entrar {
-            width: 30px;
-            height: 35px;
-            margin: 10px;
-        }
-
-        .menu {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            width: 600px;
-            align-items: center;
-            font-size: 12px;
-        }
-
-        .menu a {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: white;
-        }
-
-        footer {
-            background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
-            color: white;
-            font-size: 18px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    </style> -->
 </head>
 
 <body>
@@ -280,62 +49,76 @@
     <main>
         <div class="fundoCadastro">
             <div class="cardCadastro">
-                <h2>Cadastro de Produto</h2>
+                <h2>Cadastro de Oferta</h2>
+                <div class="descricao">
+                    <p>Preencha os campos abaixo para efetuar o cadastro da sua oferta.</p>
+                    <p>Marque a opção de doação se quiser que seu produto seja doado.</p>
+                </div>
                 <form method="POST" id="form_cadastro_venda">
                     <div class="campo">
-                        <label>Nome</label>
-                        <input type="text" aria-label="Digite seu nome" name="nome" required>
+                        <!-- <label>Nome</label> -->
+                        <input type="text" placeholder="Nome do produto" aria-label="Digite seu nome" name="nome"
+                            required>
                     </div>
                     <div class="campo">
-                        <label>Tamanho</label>
-                        <input type="text" aria-label="Digite o tamanho" name="tamanho" required>
+                        <!-- <label>Tamanho</label> -->
+                        <input type="text" placeholder="Tamanho do produto" aria-label="Digite o tamanho" name="tamanho"
+                            required>
                     </div>
                     <div class="campo">
-                        <label>Peso</label>
-                        <input type="text" aria-label="Digite o peso" name="peso" required>
+                        <!-- <label>Peso</label> -->
+                        <input type="text" placeholder="Peso do produto" aria-label="Digite o peso" name="peso"
+                            required>
                     </div>
                     <div class="campo">
-                        <label>Quantidade</label>
-                        <input type="text" aria-label="Digite a quantidade" name="quantidade" required>
+                        <!-- <label>Quantidade</label> -->
+                        <input type="text" placeholder="Quantidade" aria-label="Digite a quantidade" name="quantidade"
+                            required>
                     </div>
                     <div class="campo">
-                        <label>Cor</label>
-                        <input type="text" aria-label="Digite a cor" name="cor" required>
+                        <!-- <label>Cor</label> -->
+                        <input type="text" placeholder="Cor" aria-label="Digite a cor" name="cor" required>
                     </div>
-                    <div class="campo">
+                    <!-- <div class="campo">
                         <label>Volume</label>
-                        <input type="text" aria-label="Digite o volume" name="volume" required>
+                        <input type="text" placeholder="Digite seu nome" aria-label="Digite o volume" name="volume" required>
+                    </div> -->
+                    <div class="campo">
+                        <!-- <label>Data de Validade</label> -->
+                        <input type="text" placeholder="Data de validade" aria-label="Indique a data de validade"
+                            name="dtvalidade" required>
                     </div>
                     <div class="campo">
-                        <label>Data de Validade</label>
-                        <input type="text" aria-label="Indique a data de validade" name="dtvalidade" required>
+                        <!-- <label>Data limite de Venda</label> -->
+                        <input type="date" placeholder="Titulo da oferta" aria-label="Limite para venda" name="dtlimvd"
+                            required>
                     </div>
                     <div class="campo">
-                        <label>Data limite de Venda</label>
-                        <input type="text" aria-label="Limite para venda" name="dtlimvd" required>
+                        <!-- <label>Data limite para doação</label> -->
+                        <input type="text" placeholder="Descrição do produto" aria-label="Descrição" name="descricao"
+                            required>
                     </div>
+
                     <div class="campo">
-                        <label>Data limite para doação</label>
-                        <input type="text" aria-label="Limite para doação" name="dtlimdo" required>
+                        <!-- <label>Valor unitário</label> -->
+                        <input type="number" placeholder="Valor unitário da oferta" aria-label="Digite o valor unitário">
                     </div>
+
                     <hr>
-                    <div class="radios">
-                        <div class="radio">
-                            <input type="radio" aria-label="Doação" name="tipo" required>
+                    <div class="checks">
+                        <div class="check">
+                            <input type="checkbox" aria-label="Doação" name="tipo" required>
                             <label>Doação</label>
                         </div>
-                        <div class="radio2">
-                            <input type="radio" aria-label="Venda" name="tipo" required>
+                        <div class="check">
+                            <input type="checkbox" aria-label="Venda" name="tipo" required>
                             <label>Venda</label>
                         </div>
                     </div>
-                    <div class="opcvenda">
-                        <label>Valor unitário</label>
-                        <input type="text" aria-label="Digite o valor unitário">
-                    </div>
                     <hr> <!-- Utilizada para inserir uma linha-->
-                    <label>Fotos</label>
                     <div class="fotos">
+                        <label>Foto</label>
+
                         <!-- <img src="img/iconcam.png" alt="Icone camera"> -->
                         <input type="file" accept="image/png, image/jpeg"
                             placeholder="Adicionar fotos Você também pode arrasta-lás"
